# jules-master

./: .bazelrc  .dockerignore  .eslintrc.js  .gitignore  BUILD.bazel  Dockerfile  Dockerfile.dev  Dockerfile.test  MOBILE.md  MODULE.bazel  Makefile  README.md  WORKSPACE  capacitor.config.ts  check_db.js  clean_db.js  coverage.out  dev.nix  docker-compose.yml  drizzle.config.ts  entrypoint.sh  fix_schema_drift.ts  global-setup.ts  go.work  go.work.sum  inspect_db.ts  jest.config.js  jules-master.db  lint_output.txt  next.config.js  next.config.ts  package-lock.json  package.json  patch.diff  playwright.config.ts  pnpm-lock.yaml  pytest.ini  requirements.txt  run_tests.sh  settings_page_source.html  (+9 more)
.Jules/: palette.md
.github/workflows/: bot-daily.yml  bot-hourly.yml  ci.yml  main.yml  playwright.yml  release.yml
.idx/: dev.nix
.jules/: bolt.md  sentinel.md
app/: Dockerfile  package.json  page.tsx
app/jobs/: page.tsx
backend/: BUILD.bazel  go.mod  go.sum
backend/cmd/server/: BUILD.bazel  main.go
backend/pkg/db/: BUILD.bazel  db.go  schema.go
backend/pkg/service/: BUILD.bazel  job_service.go  session_service.go  settings_service.go
backend/pkg/worker/: BUILD.bazel  background_job.go  cron.go  monitor.go
components/: job-creation-form.tsx  new-job-dialog.tsx  pr-status.tsx
data/: sqlite.db-shm  sqlite.db-wal  user-config.json
docs/: blueprint.md
e2e/: app.spec.ts
patches/: inflight+1.0.6.patch
proto/: BUILD.bazel  go.mod  jules.pb.go  jules.proto  jules.ts  jules_grpc.pb.go  messages.proto  package-lock.json  package.json.bak  services.proto
proto/google/protobuf/: descriptor.ts  empty.ts  go_features.ts  timestamp.ts
scripts/: create-cron-job.ts  migrate.ts
server/: Dockerfile  go.mod  go.sum  test_output.txt  test_output_10.txt  test_output_11.txt  test_output_12.txt  test_output_13.txt  test_output_14.txt  test_output_15.txt  test_output_16.txt  test_output_17.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_9.txt  worker_test_output.txt  worker_test_output_2.txt  worker_test_output_3.txt  worker_test_output_4.txt  worker_test_output_5.txt
src/: BUILD.bazel  instrumentation.ts  middleware.ts
src/ai/: dev.ts  generate-title.ts
src/app/: actions.ts  error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/: activity-feed.tsx  branch-selection.tsx  collapsible-message.tsx  create-job-form.tsx  cron-job-form.tsx  cron-job-history-dialog.tsx  cron-jobs-list.tsx  env-config-provider.tsx  env-provider.tsx  floating-progress-bar.tsx  header.tsx  home-page-content.tsx  job-accordion-item.tsx  job-creation-form.tsx  job-list.tsx  job-status-badge.tsx  label-with-tooltip.tsx  message-dialog.tsx  new-job-dialog.tsx  pr-status.tsx  profile-provider.tsx  profiles-list.tsx  profiles-settings.tsx  profiles-tab.tsx  session-list.tsx  session-table.tsx  settings-sheet.tsx  source-selection.tsx
src/data/: user-config.json
src/hooks/: use-local-storage.test.tsx  use-local-storage.ts  use-profile-settings.ts  use-profiles.ts
src/jules-master/: Dockerfile  docker-compose.yml
src/lib/: auto-approval-worker.ts  auto-continue-worker.ts  auto-delete-stale-branch-worker.ts  auto-retry-worker.ts  automation-worker.ts  background-job-worker.ts  check-failing-actions-worker.ts  cron-utils.ts  cron-worker.ts  dao.ts  database.ts  db-init.ts  db.ts  fetch-client.ts  github-service.ts  grpc-client.ts  jobs.ts  jules-api.ts  jules-client.ts  logger.ts  mock-data.ts  pr-monitor-worker.ts  profile-service.ts  profile-utils.ts  queue-types.ts  rpc-client.ts  session-cache.ts  session-service.ts  sqlite-dao.test.ts  sqlite-dao.ts  storage-event.ts  throttle.ts  types.ts  utils.ts  validation.ts  worker-creator.ts
src/pages/: _document.js
test-results-kevin/: .last-run.json
tests/: CreateJobForm.test.tsx  actions.test.ts  auto-delete-stale-branch-worker.test.ts  config-actions.test.ts  cron-job-form.test.tsx  cron-jobs.test.ts  db.test.ts  history_prompts.test.ts  profiles.test.ts  session-actions.test.ts  setup.ts  utils.test.ts  validation.test.ts
tests/api/: cron-jobs.test.ts  profiles.test.ts
tests/app/: page.test.tsx  profiles.test.ts
tests/components/: combobox.spec.tsx  cron-job-form.test.tsx  cron-job-history-dialog.test.tsx  cron-jobs-list.test.tsx  floating-progress-bar.test.tsx  job-creation-form.spec.tsx  job-creation-form.test.tsx  job-list.test.tsx  message-dialog.spec.tsx  mock-data.ts  new-job-dialog.spec.tsx  pr-status.test.tsx  session-list.spec.tsx  session-list.test.tsx
tests/e2e/: auto-approval.spec.ts  automation-settings.spec.ts  background-jobs-execution.spec.ts  background-jobs.spec.ts  batch-job-creation.spec.ts  comprehensive-ui.spec.ts  create-job-form.spec.ts  create-job.e2e.ts  cron-creation.spec.ts  cron-job-history.spec.ts  cron-job.spec.ts  filter-bug.spec.ts  filter-fix.spec.ts  filter-persistence.spec.ts  filter.spec.ts  global-setup.ts  header-job-creation.spec.ts  home.spec.ts  homepage.spec.ts  job-and-session-display.spec.ts  job-creation-integration.spec.ts  job-creation.spec.ts  job-filter.spec.ts  job-session-display.spec.ts  job-sessions-ui.spec.ts  jobs-and-sessions.spec.ts  jobs.spec.ts  navigation-flow.spec.ts  navigation.spec.ts  popups.spec.ts  pr-conflict-settings.spec.ts  profiles.spec.ts  prompts.spec.ts  security-headers.spec.ts  session-actions.spec.ts  settings-advanced.spec.ts  settings-page.spec.ts  (+3 more)
ui/: .dockerignore  Dockerfile  Dockerfile.test  inspect_db.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  start.js  tailwind.config.ts  test_cron_ux.ts  tsconfig.json  unit_test_output.txt8897  vitest.config.ts
verification/: debug_page.py  script_placeholder.py  verify_cron.py  verify_cron_badges.py  verify_cron_settings.py  verify_cron_settings_tab.py  verify_cron_ux.py  verify_feed.js  verify_main_page.py  verify_popups.py  verify_popups_with_data.py  verify_popups_with_data_9002.py  verify_profiles.py  verify_progress.py  verify_settings.py  verify_ui.py
(+392 files in other folders)
