load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:next/package_json.bzl", "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/jules-org/jules
# gazelle:proto disable_global
gazelle(name = "gazelle")

npm_link_all_packages(name = "node_modules")

bin.next(
    name = "next_build",
    srcs = [
        "next.config.ts",
        "node_modules",
        "package.json",
        "postcss.config.mjs",
        "tailwind.config.ts",
        "tsconfig.json",
        "//src",
    ],
    args = ["build"],
    env = {
        "NODE_ENV": "production",
        "IS_BUILD": "true",
    },
    out_dirs = [".next"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "app_bundle",
    srcs = [
        ":next_build",
        "node_modules.tar",
        "start.js",
        "drizzle.config.ts",
        "next.config.ts",
        "package.json",
        "src.tar",
    ],
    outs = ["app_bundle.tar"],
    cmd = """
        mkdir -p app_bundle/app

        # Copy Next.js build output (default output .next)
        cp -RL $(location :next_build) app_bundle/app/.next

        # Extract node_modules (pre-packaged tar)
        tar -xf $(location node_modules.tar) -C app_bundle/app/
        
        # Copy start.js, drizzle.config, package.json
        cp $(location start.js) app_bundle/app/
        cp $(location drizzle.config.ts) app_bundle/app/
        cp $(location package.json) app_bundle/app/
        cp $(location next.config.ts) app_bundle/app/
        
        # Extract src (pre-packaged tar)
        tar -xf $(location src.tar) -C app_bundle/app/
        
        # Ensure permissions (read/execute for everyone, write for owner)
        chmod -R 755 app_bundle/app/
        
        # Tar it up
        tar -C app_bundle -cf $@ .
    """,
)

oci_image(
    name = "image",
    base = "@distroless_nodejs",
    entrypoint = [
        "/nodejs/bin/node",
        "start.js",
    ],
    env = {
        "NODE_ENV": "production",
        "DATABASE_URL": "/app/data/sqlite.db",
        "NODE_OPTIONS": "--expose-gc",
    },
    tars = [
        ":app_bundle",
    ],
    workdir = "/app",
)

oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["jules:bazel"],
)

exports_files(["node_modules/.bin/protoc-gen-ts_proto"])
